# robot_arm_kinematics

./: .gitignore  CMakeLists.txt  README.md
cli/: main.cpp
docs/: Doxyfile
include/rak/: kinematics.hpp
scripts/: regression_test.sh
src/: kinematics.cpp
tests/: test_kinematics.cpp
